--- a/public/index.html
+++ b/public/index.html
@@ -20,10 +20,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script async defer src="//www.instagram.com/embed.js"></script>
   </head>
   <body>
     <noscript>
-      You need to enable JavaScript to run this app.
+      You need to enable JavaScript to view this website.
     </noscript>
     <div id="root"></div>
     <!--
