--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Spencer Carver's Info</title>
     <script async defer src="//www.instagram.com/embed.js"></script>
   </head>
   <body>
